fixed radio button spacing

--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 
   --weight-light: 400;
   --weight-heavy: 700;
+
+  --neutral-blue: hsl(214, 19%, 29%);
 }
 
 body {
@@ -37,19 +39,26 @@ body {
 .rating-card form {
   width: 100%;
   position: relative;
-  /*  TODO : Be sure to remove this afterward */
-  border: 1px dashed white;
 
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
   gap: 1rem;
 }
 .rating-card input[type="radio"] {
   opacity: 0;
   position: absolute;
 }
+.bubble {
+  background-color: var(--neutral-blue);
+  border: none;
+  padding: 1em 1.5em;
+  border-radius: 50%;
+  text-align: center;
+}
 
-button {
+button[type="submit"] {
   display: block;
   grid-column-end: span 5;
+  width: 100%;
 }
